# protobuf

./: .gitignore  .golangci.yaml  .snyk  CONTRIBUTING.md  Makefile  README.md  RELEASE_NOTES.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  pyproject.toml  sonar-project.properties
.docker/: docker-compose.yml
.docker/rabbitmq/: enabled_plugins.conf  init.sh  rabbitmq.conf
.github/: dependabot.yml
.github/config/: .licenserc.yaml  .linkspector.yml  .markdownlint.json  .prettierignore  md-link-config.json
.github/workflows/: add-to-project.yaml  approve-and-merge.yaml  check-pr.yaml  clean-up-storage.yaml  golang.yaml  license.yaml  manage-issues.yaml  markdown.yaml  new-release.yaml  releasenotes.yaml  trivy-cache-update.yaml  update-project.yaml
docs/: README.MD  blacklist.proto.md  conf.proto.md  conf2.proto.md  constants.md  data.proto.md  device_event.proto.md  event.proto.md  fault.proto.md  grid_event.proto.md  stat.proto.md  task.proto.md  topology.proto.md
docs/c37118/v1/: conf.proto.md  stat.proto.md
docs/grid/v1/: data.proto.md  device_event.proto.md  event.proto.md  fault.proto.md  grid_event.proto.md  topology.proto.md
docs/platform/v1/: blacklist.proto.md  task.proto.md
examples/go/: go.mod  go.sum  measurements.go
examples/go/faults/: README.md  main.go
examples/go/measurements/: README.md  main.go
examples/python/: README.md  pyproject.toml  requirements.txt
examples/python/faults/: README.md  main.py
examples/python/measurements/: README.md  main.py
go/c37118/v1/: conf.pb.go  conf2.pb.go  stat.pb.go  stat_test.go
go/constants/: constants.go  constants_test.go  sourcetype_string.go
go/grid/v1/: FullGrid_TP.xml  data.pb.go  data_test.go  device_event.pb.go  event.pb.go  event_test.go  fault.pb.go  fault_test.go  grid_event.pb.go  topology.pb.go  topology_test.go
go/platform/v1/: blacklist.pb.go  task.pb.go  task_test.go
internal/config/: env.go  env_test.go
pkg/: example.go  example_test.go
pkg/conf/v1/: conf2.pb.go  conf2_test.go
pkg/data/v1/: data.pb.go  data_test.go
pkg/fault/v1/: fault.pb.go  fault_test.go
pkg/grid/v1/: FullGrid_SSH.xml  data.pb.go  device_event.pb.go  event.pb.go  event_test.go  fault.pb.go  fault_test.go  grid_event.pb.go  stat.pb.go  topology.pb.go  topology_test.go
pkg/platform/v1/: task.pb.go  task_test.go
pkg/task/v1/: task.pb.go  task_test.go
proto/: buf.gen.yaml  buf.yaml
proto/c37118/v1/: conf2.proto  stat.proto
proto/conf/v1/: conf2.proto
proto/data/v1/: data.proto
proto/fault/v1/: fault.proto
proto/grid/v1/: data.proto  device_event.proto  event.proto  fault.proto  grid_event.proto  stat.proto  topology.proto
proto/platform/v1/: task.proto
proto/task/v1/: task.proto
python/c37118/v1/: conf2_pb2.py  stat_pb2.py
python/grid/v1/: data_pb2.py  device_event_pb2.py  event_pb2.py  fault_pb2.py  grid_event_pb2.py  topology_pb2.py
python/platform/v1/: task_pb2.py
python/zaphiro/c37118/v1/: conf2_pb2.py  conf2_pb2.pyi  conf_pb2.py  conf_pb2.pyi  stat_pb2.py  stat_pb2.pyi
python/zaphiro/grid/v1/: data_pb2.py  data_pb2.pyi  device_event_pb2.py  device_event_pb2.pyi  event_pb2.py  event_pb2.pyi  fault_pb2.py  fault_pb2.pyi  grid_event_pb2.py  grid_event_pb2.pyi  topology_pb2.py  topology_pb2.pyi
python/zaphiro/platform/v1/: blacklist_pb2.py  blacklist_pb2.pyi  task_pb2.py  task_pb2.pyi
zaphiro/c37118/v1/: conf.proto  conf2.proto  stat.proto
zaphiro/grid/v1/: data.proto  device_event.proto  event.proto  fault.proto  grid_event.proto  topology.proto
zaphiro/platform/v1/: blacklist.proto  task.proto
