# Copyright 2024 Zaphiro Technologies
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "protobuf-zaphiro"
version = "0.0.4-dev"
description = "Zaphiro Protocol Buffers"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Documentation = "https://github.com/zaphiro-technologies/protobuf"
Repository = "https://github.com/zaphiro-technologies/protobuf"

[tool.poetry]
name = "protobuf-zaphiro"
version = "0.0.4-dev"
description = "Zaphiro Protocol Buffers"
authors = ["Federico M. Facca <federico.facca@zaphiro.ch>"]
readme = "README.md"
packages = [{include = "*", from="python"}]
repository = "https://github.com/zaphiro-technologies/protobuf"
documentation = "https://github.com/zaphiro-technologies/protobuf"

[tool.poetry.dependencies]
python = ">=3.8"
protobuf = "^5.26.0"
types-protobuf = "^4.24.0.20240311"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
