[project]
name = "protobuf-zaphiro"
version = "0.0.17"
description = "Zaphiro Protocol Buffers"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"

[project.urls]
Documentation = "https://github.com/zaphiro-technologies/protobuf"
Repository = "https://github.com/zaphiro-technologies/protobuf"

[tool.poetry]
name = "protobuf-zaphiro"
version = "0.0.17"
description = "Zaphiro Protocol Buffers"
authors = ["Federico M. Facca <federico.facca@zaphiro.ch>"]
readme = "README.md"
packages = [{include = "*", from="python"}]
repository = "https://github.com/zaphiro-technologies/protobuf"
documentation = "https://github.com/zaphiro-technologies/protobuf"

[tool.poetry.dependencies]
python = ">=3.8"
protobuf = "^5.29.5"
types-protobuf = "^4.24.0.20240311"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
